# tiferet-command-parser-edu

./: .gitignore  AGENTS.md  LEXICAL_SPEC.md  PROJECT_PROPOSAL.md  PROJECT_SUMMARY.md  README.md  agents.md  compiler.py  config.yml  pyproject.toml
Parser/: grammar_specification.md
Parser/samples/: fail_bare_function.py  fail_class_bare_attribute.py  fail_class_bare_method.py  fail_class_no_section.py  fail_import_no_group.py  pass_annotated_event.py  pass_minimal_event.py  pass_multi_member_event.py  pass_multi_section_event.py  pass_standalone_function.py
Scanner/: LEXICAL_SPEC.md  SCANNER_PROCESS.md  __init__.py  lexer.py
Scanner/events/: scan.py
Scanner/interfaces/: __init__.py
Scanner/samples/: add_calc_event.py  add_error_event.py  invalid_annotation_event.py  invalid_class_name_event.py  invalid_identifier_names_event.py  invalid_member_names_event.py  todo_get_error_event.py
Scanner/utils/tests/: test_output.py
docs/guides/: lexical_spec.md
docs/guides/utils/: lexer.md
samples/: add_error_event.py  base_calc_event.py  empty_events.py  error_events.py  obsolete_rename_error_event.py  remove_error_message_event.py
src/: __init__.py
src/assets/: __init__.py  lexer.py
src/events/: __init__.py  scan.py  settings.py
src/events/tests/: test_scan.py
src/interfaces/: __init__.py  lexer.py
src/utils/: __init__.py  indent.py  lexer.py  output.py  parser.py
src/utils/tests/: test_indent.py  test_lexer.py  test_output.py  test_parser.py
